--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,13 @@ before_script:
   - bash scripts/build
 
   # Download and install Apache solr
-  - pwd
+  - cd /home
   - wget http://wiki.gizra-labs.com/images/e/ee/Apache-solr-3.6.2.zip
   - unzip -o Apache-solr-3.6.2.zip
   - cd apache-solr-3.6.2/example/solr/conf
-  - yes | cp /var/www/openscholar/www/profiles/openscholar/modules/contrib/apachesolr/solr-conf/solr-3.x/* .
+  - yes | cp /home/travis/build/openscholar/openscholar/www/profiles/openscholar/modules/contrib/apachesolr/solr-conf/solr-3.x/* .
+  - cd /home/travis/build/openscholar/openscholar
+  - ls
 
   # Install a multi-tanent, development site.
   - pwd
