--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_script:
   - yes | cp /home/travis/build/openscholar/openscholar/www/profiles/openscholar/modules/contrib/apachesolr/solr-conf/solr-3.x/* .
   - cd ../../
   - sudo apt-get install gnome-terminal
-  - gnome-terminal --window --title=solr -e "java -jar start.jar"
+  - java -jar start.jar &
   - sleep 10
   - cd /home/travis/build/openscholar/openscholar
   - ls
