--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ before_script:
   - unzip -o Apache-solr-3.6.2.zip
   - cd apache-solr-3.6.2/example/solr/conf
   - yes | cp /home/travis/build/openscholar/openscholar/www/profiles/openscholar/modules/contrib/apachesolr/solr-conf/solr-3.x/* .
+  - yes | cp /home/travis/build/openscholar/openscholar/behat/solr/solrconfig.xml .
   - cd ../../
-  - sudo apt-get install gnome-terminal
   - java -jar start.jar &
   - sleep 10
   - cd /home/travis/build/openscholar/openscholar
