--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,9 @@ before_script:
   - wget http://wiki.gizra-labs.com/images/e/ee/Apache-solr-3.6.2.zip
   - unzip -o Apache-solr-3.6.2.zip
   - cd apache-solr-3.6.2/example/solr/conf
+  # Copy the solr config files from the apache solr module
   - yes | cp /home/travis/build/openscholar/openscholar/www/profiles/openscholar/modules/contrib/apachesolr/solr-conf/solr-3.x/* .
+  # Copy the modified solrconfig.xml file to commit records every 20 seconds so items will show up in search sooner
   - yes | cp /home/travis/build/openscholar/openscholar/www/profiles/openscholar/behat/solr/solrconfig.xml .
   - cd ../../
   - java -jar start.jar &
